# Qwen3-ASR-Toolkit

./: README.md  pyproject.toml  requirements.txt
qwen3_asr_toolkit/: call_api.py  qwen3asr.py
